--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <ul>
-      <li><a href="/src/task-01.html">task 1</a></li>
-      <li><a href="/src/task-02.html">task 2</a></li>
-      <li><a href="/src/task-03.html">task 3</a></li>
-      <li><a href="/src/task-04.html">task 4</a></li>
-      <li><a href="/src/task-05.html">task 5</a></li>
-      <li><a href="/src/task-06.html">task 6</a></li>
-      <li><a href="/src/task-07.html">task 7</a></li>
+      <li><a href="./src/task-01.html">task 1</a></li>
+      <li><a href="./src/task-02.html">task 2</a></li>
+      <li><a href="./src/task-03.html">task 3</a></li>
+      <li><a href="./src/task-04.html">task 4</a></li>
+      <li><a href="./src/task-05.html">task 5</a></li>
+      <li><a href="./src/task-06.html">task 6</a></li>
+      <li><a href="./src/task-07.html">task 7</a></li>
     </ul>
   </body>
 </html>
